# arduino

./: .gitignore  Makefile.common.jihartik
Attiny-h34a-PIR-transmitter/: CMakeLists.txt  platformio.ini
AttinyThermometerSender/: AttinyThermometerSender.ino
AutopilotRemoteRFM69/: .gitignore  CMakeLists.txt  platformio.ini
BME280Sensor/: CMakeLists.txt  platformio.ini
BMP180ThermometerSender/: .clang_complete  .gcc-flags.json  .gitignore  CMakeLists.txt  platformio.ini
ESP-433-MQTT-gateway/: .gitignore  CMakeLists.txt  platformio.ini
ESP-433-transmitter/: .gitignore  CMakeLists.txt  CMakeListsUser.txt  platformio.ini
ESP-BT-MQTT-gateway/: .gitignore  CMakeLists.txt  CMakeListsUser.txt  platformio.ini
ESP-IR-sender/: .gitignore  CMakeLists.txt  platformio.ini
ESP-lux-meter/: CMakeLists.txt  platformio.ini
ESP-motor-fan-controller/: CMakeLists.txt  CMakeListsUser.txt  platformio.ini
ESP-tsl2561-blink-detector/: .gitignore  CMakeLists.txt  CMakeListsUser.txt  platformio.ini
IMU_display/: IMU_display.ino
INA219Sensor/: .gitignore  CMakeLists.txt
InternalOscillatorCalibration/: CMakeLists.txt
NRF24GettingStarted/: NRF24GettingStarted.ino
NRF24TestSender/: NRF24TestSender.ino
NRFThermometerSender/: .gitignore  CMakeLists.txt  NRFThermometerSender.ino  platformio.ini
NTC100kThermometer/: .gitignore  CMakeLists.txt  platformio.ini
PinChangeIntTest/: .gitignore  CMakeLists.txt
RFM69-PWM-controller/: CMakeLists.txt  platformio.ini
RFM69-to-nRF24-gateway/: CMakeLists.txt  platformio.ini
STM32ThermometerSender/: STM32ThermometerSender.ino
STM32_NRF_test_sender/: STM32_NRF_test_sender.ino
ThermometerSender/: ThermometerSender.ino
attiny_radio_sender/: attiny_radio_sender.ino
attiny_water_tank_sender/: attiny_water_tank_sender.ino
bmp180_reader/: bmp180_reader.ino
capacitive_sensing/: capacitive_sensing.ino
experiments/e-display-test/: .gitignore  CMakeLists.txt  Makefile  e-display-test.emProject  gcc_nrf52840.ld
experiments/e-display-test/src/: EInkDisplay.cpp  EInkDisplay.hpp  main.cpp  sdk_config.h
experiments/e-display-test/src/epd2in9/: epd2in9.cpp  epdif.cpp  epdif.h  font12.cpp  font16.cpp  font20.cpp  font24.cpp  font8.cpp
lcd_display/: lcd_display.ino
nrf5-autopilot-remote/: CMakeLists.txt  Makefile  nrf5-autopilot-remote.emProject
nrf5-autopilot-remote/src/: Button.hpp  ble.cpp  ble.hpp  buttons.cpp  buttons.hpp  main.cpp  sdk_config.h  vcc_measurement.cpp  vcc_measurement.hpp
nrf5-bt-sensor-receiver/: CMakeLists.txt  Makefile  gcc_nrf52_no_softdevice.ld  nrf5-bt-sensor-receiver.emProject
nrf5-environment-sensor/: .gitignore  CMakeLists.txt  Makefile  gcc_nrf52_s132.ld  nrf5-environment-sensor.emProject
nrf5-ina226-sensor/: .gitignore  CMakeLists.txt  Makefile  gcc_nrf52_s132.ld
nrf5-repeater/: Makefile
nrf5-sensor-receiver/: CMakeLists.txt  Makefile
nrf51-ble-bootloader/: .gitignore  CMakeLists.txt  Makefile  dfu_public_key.c  secure_dfu_gcc_nrf51.ld  secure_dfu_gcc_nrf51_debug.ld
nrf51-marine-display/: CMakeLists.txt  Makefile  gcc_nrf51_s130.ld  gcc_nrf52_s132.ld
nrf52-ble-bootloader/: .gitignore  CMakeLists.txt  Makefile
nrf52-remote-display/: .gitignore  CMakeLists.txt  Makefile  gcc_nrf52_s132.ld
nrf52-remote-display/src/: ArduinoJson-v5.13.3.hpp  Display.cpp  Display.hpp  NRFu8g2Adapter.cpp  NRFu8g2Adapter.hpp  PowerManager.cpp  PowerManager.hpp  ble_data_service.cpp  ble_data_service.hpp  ble_support.cpp  ble_support.hpp  ble_support_adv.cpp  ble_support_adv.hpp  cmd_protocol.cpp  cmd_protocol.hpp  config.hpp  countdown_timer.cpp  countdown_timer.hpp  display.c  display.cpp  display.h  display.hpp  display2.cpp  display2.hpp  display_command_handler.cpp  display_command_handler.hpp  main.c  main.cpp  nrf_u8g2_adapter.hpp  power_manager.c  power_manager.cpp  power_manager.h  rendering.cpp  rendering.hpp  sdk_config.h  state_machine.hpp  status_bar.cpp  status_bar.hpp  util.cpp  util.hpp
nrf52-remote-display/src/states/: adv_with_whitelist.hpp  base.hpp  common.hpp  connectable.hpp  connected.hpp  discoverable.hpp  idle.hpp  start.hpp  states_common.hpp
nrf52840-ble-bootloader/: CMakeLists.txt  Makefile  secure_bootloader_gcc_nrf52840.ld
nrf52840-ble-bootloader/src/: main.c  sdk_config.h
radio_receiver/: radio_receiver.ino
radio_sender/: radio_sender.ino
rc-car-bms/: CMakeLists.txt  README.md  platformio.ini
spi_test/: spi_test.ino
stm32_periodic_standby/: stm32_periodic_standby.ino
stm32_periodic_stop/: stm32_periodic_stop.ino
test_sketch/: test_sketch.ino
thread/bootloader/: CMakeLists.txt  Makefile
thread/bootloader/src/: main.c  sdk_config.h
thread/network-display/: .gitignore  CMakeLists.txt  Makefile  network-display.emProject  network-display.emSession  openthread_nrf52840.ld
thread/network-display/src/: ArduinoJson-v5.13.4.hpp  ArduinoJson-v6.13.0.hpp  cmd_protocol.cpp  cmd_protocol.hpp  coap_helpers.cpp  coap_helpers.hpp  coap_service.cpp  coap_service.hpp  dfu_public_key.c  display.cpp  display.hpp  display_command_handler.cpp  main.c  main.cpp  nokia_display.cpp  nokia_display.hpp  nrf_u8g2_adapter.cpp  nrf_u8g2_adapter.hpp  periodic_timer.cpp  periodic_timer.hpp  power_manager.cpp  rendering.cpp  rendering.hpp  sdk_config.h  settings.cpp  settings.hpp  state_machine.hpp  thread.cpp  thread.hpp  timer.cpp  timer.hpp  u8g2_rendering.cpp  u8g2_rendering.hpp  util.cpp  util.hpp  vcc.cpp  vcc.hpp
thread/network-display/src/eink_display/: eink_display.cpp  eink_display.hpp  epd_interface.cpp  epd_interface.hpp
thread/network-display/src/eink_display/epd_2in9/: epd_2in9.cpp  epd_2in9.hpp
thread/network-display/src/eink_display/good_display/: epd_2in9.cpp  epd_2in9.hpp  good_display_1in54.hpp  good_display_2in13.hpp  good_display_2in9.hpp  good_display_2in9_4gray.hpp  good_display_base.cpp  good_display_base.hpp  il0373_display_base.cpp  il0373_display_base.hpp  il3820_display_base.cpp  il3820_display_base.hpp
thread/network-display/src/states/: common.hpp  configure.hpp  connected.hpp  context.hpp  discover.hpp  start.hpp
wordmaster_3000/: nsfw5.h  (+21 more)
(+342 files in other folders)
