cmake_minimum_required(VERSION 3.2)
project(nrf52-remote-display)
set(CMAKE_CXX_STANDARD 17)

set(CMAKE_C_COMPILER "/usr/local/bin/arm-none-eabi-gcc")
set(CMAKE_CXX_COMPILER "/usr/local/bin/arm-none-eabi-g++")
set(SDK_ROOT "$ENV{HOME}/nonbackupped/nRF5_SDK_14.2.0")
set(U8G2_ROOT "$ENV{HOME}/arduino/u8g2")
set(HFSM_ROOT "$ENV{HOME}/Documents/dev/HFSM")

add_definitions(-DNRF5)
add_definitions(-DNRF52)
add_definitions(-DNRF52832)
add_definitions(-DBOARD_CUSTOM)
add_definitions(-DUSE_LFXO)
add_definitions(-DBLE_STACK_SUPPORT_REQD)
add_definitions(-DSOFTDEVICE_PRESENT)
add_definitions(-DS132)
add_definitions(-DNRF_SD_BLE_API_VERSION=5)

include_directories("${PROJECT_SOURCE_DIR}/src")
include_directories("${SDK_ROOT}/components/drivers_nrf/comp")
include_directories("${SDK_ROOT}/components/drivers_nrf/twi_master")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_ancs_c")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_ias_c")
include_directories("${SDK_ROOT}/components/libraries/pwm")
include_directories("${SDK_ROOT}/components/softdevice/s132/headers/nrf52")
include_directories("${SDK_ROOT}/components/libraries/usbd/class/cdc/acm")
include_directories("${SDK_ROOT}/components/libraries/usbd/class/hid/generic")
include_directories("${SDK_ROOT}/components/libraries/usbd/class/msc")
include_directories("${SDK_ROOT}/components/libraries/usbd/class/hid")
include_directories("${SDK_ROOT}/components/libraries/experimental_log")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_gls")
include_directories("${SDK_ROOT}/components/libraries/fstorage")
include_directories("${SDK_ROOT}/components/drivers_nrf/i2s")
include_directories("${SDK_ROOT}/components/libraries/mutex")
include_directories("${SDK_ROOT}/components/libraries/gpiote")
include_directories("${SDK_ROOT}/components/libraries/experimental_log/src")
include_directories("${SDK_ROOT}/components/drivers_nrf/gpiote")
include_directories("${SDK_ROOT}/components/boards")
include_directories("${SDK_ROOT}/components/libraries/experimental_memobj")
include_directories("${SDK_ROOT}/components/drivers_nrf/common")
include_directories("${SDK_ROOT}/components/ble/ble_advertising")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_bas_c")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_hrs_c")
include_directories("${SDK_ROOT}/components/libraries/queue")
include_directories("${SDK_ROOT}/components/libraries/pwr_mgmt")
include_directories("${SDK_ROOT}/components/ble/ble_dtm")
include_directories("${SDK_ROOT}/components/toolchain/cmsis/include")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_rscs_c")
include_directories("${SDK_ROOT}/components/drivers_nrf/uart")
include_directories("${SDK_ROOT}/components/ble/common")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_lls")
include_directories("${SDK_ROOT}/components/drivers_nrf/wdt")
include_directories("${SDK_ROOT}/components/libraries/bsp")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_bas")
include_directories("${SDK_ROOT}/components/libraries/experimental_section_vars")
include_directories("${SDK_ROOT}/components/softdevice/s132/headers")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_ans_c")
include_directories("${SDK_ROOT}/components/libraries/slip")
include_directories("${SDK_ROOT}/components/libraries/mem_manager")
include_directories("${SDK_ROOT}/external/segger_rtt")
include_directories("${SDK_ROOT}/components/libraries/usbd/class/cdc")
include_directories("${SDK_ROOT}/components/drivers_nrf/hal")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_nus_c")
include_directories("${SDK_ROOT}/components/drivers_nrf/rtc")
include_directories("${SDK_ROOT}/components/softdevice/common")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_ias")
include_directories("${SDK_ROOT}/components/libraries/usbd/class/hid/mouse")
include_directories("${SDK_ROOT}/components/libraries/ecc")
include_directories("${SDK_ROOT}/components/drivers_nrf/ppi")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_dfu")
include_directories("${SDK_ROOT}/external/fprintf")
include_directories("${SDK_ROOT}/components/drivers_nrf/twis_slave")
include_directories("${SDK_ROOT}/components/libraries/atomic")
include_directories("${SDK_ROOT}/components")
include_directories("${SDK_ROOT}/components/libraries/scheduler")
include_directories("${SDK_ROOT}/components/libraries/cli")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_lbs")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_hts")
include_directories("${SDK_ROOT}/components/drivers_nrf/delay")
include_directories("${SDK_ROOT}/components/libraries/crc16")
include_directories("${SDK_ROOT}/components/drivers_nrf/timer")
include_directories("${SDK_ROOT}/components/libraries/util")
include_directories("${SDK_ROOT}/components/drivers_nrf/pwm")
include_directories("${SDK_ROOT}/components/libraries/csense_drv")
include_directories("${SDK_ROOT}/components/libraries/csense")
include_directories("${SDK_ROOT}/components/libraries/balloc")
include_directories("${SDK_ROOT}/components/libraries/low_power_pwm")
include_directories("${SDK_ROOT}/components/libraries/hardfault")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_cscs")
include_directories("${SDK_ROOT}/components/libraries/uart")
include_directories("${SDK_ROOT}/components/libraries/hci")
include_directories("${SDK_ROOT}/components/libraries/usbd/class/hid/kbd")
include_directories("${SDK_ROOT}/components/drivers_nrf/spi_slave")
include_directories("${SDK_ROOT}/components/drivers_nrf/lpcomp")
include_directories("${SDK_ROOT}/components/libraries/timer")
include_directories("${SDK_ROOT}/components/drivers_nrf/rng")
include_directories("${SDK_ROOT}/components/drivers_nrf/power")
include_directories("${SDK_ROOT}/components/libraries/usbd/config")
include_directories("${SDK_ROOT}/components/toolchain")
include_directories("${SDK_ROOT}/components/libraries/led_softblink")
include_directories("${SDK_ROOT}/components/drivers_nrf/qdec")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_cts_c")
include_directories("${SDK_ROOT}/components/drivers_nrf/spi_master")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_nus")
include_directories("${SDK_ROOT}/components/libraries/twi_mngr")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_hids")
include_directories("${SDK_ROOT}/components/libraries/strerror")
include_directories("${SDK_ROOT}/components/drivers_nrf/pdm")
include_directories("${SDK_ROOT}/components/libraries/crc32")
include_directories("${SDK_ROOT}/components/libraries/usbd/class/audio")
include_directories("${SDK_ROOT}/components/ble/peer_manager")
include_directories("${SDK_ROOT}/components/drivers_nrf/swi")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_tps")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_dis")
include_directories("${SDK_ROOT}/components/device")
include_directories("${SDK_ROOT}/components/ble/nrf_ble_qwr")
include_directories("${SDK_ROOT}/components/libraries/button")
include_directories("${SDK_ROOT}/components/libraries/usbd")
include_directories("${SDK_ROOT}/components/drivers_nrf/saadc")
include_directories("${SDK_ROOT}/components/libraries/atomic_fifo")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_lbs_c")
include_directories("${SDK_ROOT}/components/ble/ble_racp")
include_directories("${SDK_ROOT}/components/toolchain/gcc")
include_directories("${SDK_ROOT}/components/libraries/fds")
include_directories("${SDK_ROOT}/components/libraries/twi")
include_directories("${SDK_ROOT}/components/drivers_nrf/clock")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_rscs")
include_directories("${SDK_ROOT}/components/drivers_nrf/usbd")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_hrs")
include_directories("${SDK_ROOT}/components/libraries/serial")
include_directories("${SDK_ROOT}/components/libraries/crc32")
include_directories("${SDK_ROOT}/components/libraries/crypto")
include_directories("${U8G2_ROOT}/csrc")
include_directories("${HFSM_ROOT}/include")

file(GLOB_RECURSE SRC_LIST "${PROJECT_SOURCE_DIR}/src/*.*")

add_executable(${PROJECT_NAME} ${SRC_LIST})
