cmake_minimum_required(VERSION 3.2)
project(nrf52840-test)

set(CMAKE_C_COMPILER "/usr/local/bin/arm-none-eabi-gcc")
set(CMAKE_CXX_COMPILER "/usr/local/bin/arm-none-eabi-g++")
set(SDK_ROOT "$ENV{HOME}/nonbackupped/nRF5_SDK_15.2.0")

add_definitions(-DNRF52840_XXAA)
add_definitions(-DBOARD_CUSTOM)
add_definitions(-DSOFTDEVICE_PRESENT)
add_definitions(-DBLE_STACK_SUPPORT_REQD)
add_definitions(-DS140)
add_definitions(-DNRF_SD_BLE_API_VERSION=6)

include_directories("${PROJECT_SOURCE_DIR}/src")
include_directories("${SDK_ROOT}/components/libraries/crypto/backend/micro_ecc")
include_directories("${SDK_ROOT}/components/libraries/memobj")
include_directories("${SDK_ROOT}/components/softdevice/s140/headers/nrf52")
include_directories("${SDK_ROOT}/components/libraries/crc32")
include_directories("${SDK_ROOT}/components/libraries/experimental_section_vars")
include_directories("${SDK_ROOT}/components/libraries/mem_manager")
include_directories("${SDK_ROOT}/components/libraries/fstorage")
include_directories("${SDK_ROOT}/components/libraries/util")
include_directories("${SDK_ROOT}/modules/nrfx")
include_directories("${SDK_ROOT}/external/nrf_oberon/include")
include_directories("${SDK_ROOT}/components/libraries/crypto/backend/oberon")
include_directories("${SDK_ROOT}/components/libraries/crypto/backend/cifra")
include_directories("${SDK_ROOT}/components/libraries/atomic")
include_directories("${SDK_ROOT}/integration/nrfx")
include_directories("${SDK_ROOT}/components/libraries/crypto/backend/cc310_bl")
include_directories("${SDK_ROOT}/external/nrf_cc310/include")
include_directories("${SDK_ROOT}/components/libraries/log/src")
include_directories("${SDK_ROOT}/components/libraries/bootloader/dfu")
include_directories("${SDK_ROOT}/components/ble/common")
include_directories("${SDK_ROOT}/components/libraries/delay")
include_directories("${SDK_ROOT}/components/libraries/svc")
include_directories("${SDK_ROOT}/components/libraries/stack_info")
include_directories("${SDK_ROOT}/components/libraries/crypto/backend/nrf_hw")
include_directories("${SDK_ROOT}/components/libraries/log")
include_directories("${SDK_ROOT}/external/nrf_oberon")
include_directories("${SDK_ROOT}/components/libraries/strerror")
include_directories("${SDK_ROOT}/components/libraries/crypto/backend/mbedtls")
include_directories("${SDK_ROOT}/components/boards")
include_directories("${SDK_ROOT}/components/libraries/crypto/backend/cc310")
include_directories("${SDK_ROOT}/components/libraries/bootloader")
include_directories("${SDK_ROOT}/components/softdevice/s140/headers")
include_directories("${SDK_ROOT}/components/libraries/crypto")
include_directories("${SDK_ROOT}/components/libraries/scheduler")
include_directories("${SDK_ROOT}/external/nrf_cc310_bl/include")
include_directories("${SDK_ROOT}/modules/nrfx/hal")
include_directories("${SDK_ROOT}/external/fprintf")
include_directories("${SDK_ROOT}/components/toolchain/cmsis/include")
include_directories("${SDK_ROOT}/components/libraries/balloc")
include_directories("${SDK_ROOT}/components/libraries/atomic_fifo")
include_directories("${SDK_ROOT}/components/libraries/crypto/backend/nrf_sw")
include_directories("${SDK_ROOT}/modules/nrfx/mdk")
include_directories("${SDK_ROOT}/components/libraries/bootloader/ble_dfu")
include_directories("${SDK_ROOT}/components/softdevice/common")
include_directories("${SDK_ROOT}/external/nano-pb")
include_directories("${SDK_ROOT}/components/libraries/queue")
include_directories("${SDK_ROOT}/components/libraries/mutex")
include_directories("${SDK_ROOT}/components/libraries/ringbuf")


file(GLOB_RECURSE SRC_LIST "${PROJECT_SOURCE_DIR}/src/*.*")

add_executable(${PROJECT_NAME} ${SRC_LIST})
