cmake_minimum_required(VERSION 3.2)
project(e-display-test)
set(CMAKE_CXX_STANDARD 17)

set(CMAKE_C_COMPILER "/usr/local/bin/arm-none-eabi-gcc")
set(CMAKE_CXX_COMPILER "/usr/local/bin/arm-none-eabi-g++")
set(SDK_ROOT "$ENV{HOME}/nonbackupped/nRF5_SDK_15.2.0")

add_definitions(-DNRF52840_XXAA)
add_definitions(-DBOARD_CUSTOM)

include_directories("${PROJECT_SOURCE_DIR}/src")
include_directories("${SDK_ROOT}/components/nfc/ndef/generic/message")
include_directories("${SDK_ROOT}/components/nfc/t2t_lib")
include_directories("${SDK_ROOT}/components/nfc/t4t_parser/hl_detection_procedure")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_ancs_c")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_ias_c")
include_directories("${SDK_ROOT}/components/libraries/pwm")
include_directories("${SDK_ROOT}/components/libraries/usbd/class/cdc/acm")
include_directories("${SDK_ROOT}/components/libraries/usbd/class/hid/generic")
include_directories("${SDK_ROOT}/components/libraries/usbd/class/msc")
include_directories("${SDK_ROOT}/components/libraries/usbd/class/hid")
include_directories("${SDK_ROOT}/modules/nrfx/hal")
include_directories("${SDK_ROOT}/components/nfc/ndef/conn_hand_parser/le_oob_rec_parser")
include_directories("${SDK_ROOT}/components/libraries/log")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_gls")
include_directories("${SDK_ROOT}/components/libraries/fstorage")
include_directories("${SDK_ROOT}/components/nfc/ndef/text")
include_directories("${SDK_ROOT}/components/libraries/mutex")
include_directories("${SDK_ROOT}/components/libraries/gpiote")
include_directories("${SDK_ROOT}/components/libraries/bootloader/ble_dfu")
include_directories("${SDK_ROOT}/components/nfc/ndef/connection_handover/common")
include_directories("${SDK_ROOT}/components/boards")
include_directories("${SDK_ROOT}/components/nfc/ndef/generic/record")
include_directories("${SDK_ROOT}/components/ble/ble_advertising")
include_directories("${SDK_ROOT}/external/utf_converter")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_bas_c")
include_directories("${SDK_ROOT}/modules/nrfx/drivers/include")
include_directories("${SDK_ROOT}/components/libraries/experimental_task_manager")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_hrs_c")
include_directories("${SDK_ROOT}/components/softdevice/s140/headers/nrf52")
include_directories("${SDK_ROOT}/components/nfc/ndef/connection_handover/le_oob_rec")
include_directories("${SDK_ROOT}/components/libraries/queue")
include_directories("${SDK_ROOT}/components/libraries/pwr_mgmt")
include_directories("${SDK_ROOT}/components/ble/ble_dtm")
include_directories("${SDK_ROOT}/components/toolchain/cmsis/include")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_rscs_c")
include_directories("${SDK_ROOT}/components/ble/common")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_lls")
include_directories("${SDK_ROOT}/components/libraries/bsp")
include_directories("${SDK_ROOT}/components/nfc/ndef/connection_handover/ac_rec")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_bas")
include_directories("${SDK_ROOT}/components/libraries/mpu")
include_directories("${SDK_ROOT}/components/libraries/experimental_section_vars")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_ans_c")
include_directories("${SDK_ROOT}/components/libraries/slip")
include_directories("${SDK_ROOT}/components/libraries/delay")
include_directories("${SDK_ROOT}/components/libraries/mem_manager")
include_directories("${SDK_ROOT}/components/libraries/csense_drv")
include_directories("${SDK_ROOT}/components/libraries/memobj")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_nus_c")
include_directories("${SDK_ROOT}/components/softdevice/common")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_ias")
include_directories("${SDK_ROOT}/components/libraries/usbd/class/hid/mouse")
include_directories("${SDK_ROOT}/components/libraries/low_power_pwm")
include_directories("${SDK_ROOT}/components/nfc/ndef/conn_hand_parser/ble_oob_advdata_parser")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_dfu")
include_directories("${SDK_ROOT}/external/fprintf")
include_directories("${SDK_ROOT}/components/libraries/svc")
include_directories("${SDK_ROOT}/components/libraries/atomic")
include_directories("${SDK_ROOT}/components")
include_directories("${SDK_ROOT}/components/libraries/scheduler")
include_directories("${SDK_ROOT}/components/libraries/cli")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_lbs")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_hts")
include_directories("${SDK_ROOT}/components/libraries/crc16")
include_directories("${SDK_ROOT}/components/nfc/t4t_parser/apdu")
include_directories("${SDK_ROOT}/components/libraries/util")
include_directories("${SDK_ROOT}/components/libraries/usbd/class/cdc")
include_directories("${SDK_ROOT}/components/libraries/csense")
include_directories("${SDK_ROOT}/components/libraries/balloc")
include_directories("${SDK_ROOT}/components/libraries/ecc")
include_directories("${SDK_ROOT}/components/libraries/hardfault")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_cscs")
include_directories("${SDK_ROOT}/components/libraries/hci")
include_directories("${SDK_ROOT}/components/libraries/timer")
include_directories("${SDK_ROOT}/components/softdevice/s140/headers")
include_directories("${SDK_ROOT}/integration/nrfx")
include_directories("${SDK_ROOT}/components/nfc/t4t_parser/tlv")
include_directories("${SDK_ROOT}/components/libraries/sortlist")
include_directories("${SDK_ROOT}/components/libraries/spi_mngr")
include_directories("${SDK_ROOT}/components/libraries/led_softblink")
include_directories("${SDK_ROOT}/components/nfc/ndef/conn_hand_parser")
include_directories("${SDK_ROOT}/components/libraries/sdcard")
include_directories("${SDK_ROOT}/components/nfc/ndef/parser/record")
include_directories("${SDK_ROOT}/modules/nrfx/mdk")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_cts_c")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_nus")
include_directories("${SDK_ROOT}/components/libraries/twi_mngr")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_hids")
include_directories("${SDK_ROOT}/components/libraries/strerror")
include_directories("${SDK_ROOT}/components/libraries/crc32")
include_directories("${SDK_ROOT}/components/nfc/ndef/connection_handover/ble_oob_advdata")
include_directories("${SDK_ROOT}/components/nfc/t2t_parser")
include_directories("${SDK_ROOT}/components/nfc/ndef/connection_handover/ble_pair_msg")
include_directories("${SDK_ROOT}/components/libraries/usbd/class/audio")
include_directories("${SDK_ROOT}/components/nfc/t4t_lib/hal_t4t")
include_directories("${SDK_ROOT}/components/nfc/t4t_lib")
include_directories("${SDK_ROOT}/components/ble/peer_manager")
include_directories("${SDK_ROOT}/components/drivers_nrf/usbd")
include_directories("${SDK_ROOT}/components/libraries/ringbuf")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_tps")
include_directories("${SDK_ROOT}/components/nfc/ndef/parser/message")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_dis")
include_directories("${SDK_ROOT}/components/nfc/ndef/uri")
include_directories("${SDK_ROOT}/components/nfc/t4t_parser/cc_file")
include_directories("${SDK_ROOT}/components/ble/nrf_ble_qwr")
include_directories("${SDK_ROOT}/components/libraries/gfx")
include_directories("${SDK_ROOT}/components/libraries/button")
include_directories("${SDK_ROOT}/modules/nrfx")
include_directories("${SDK_ROOT}/components/libraries/twi_sensor")
include_directories("${SDK_ROOT}/integration/nrfx/legacy")
include_directories("${SDK_ROOT}/components/libraries/usbd/class/hid/kbd")
include_directories("${SDK_ROOT}/components/nfc/ndef/connection_handover/ep_oob_rec")
include_directories("${SDK_ROOT}/external/segger_rtt")
include_directories("${SDK_ROOT}/components/libraries/atomic_fifo")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_lbs_c")
include_directories("${SDK_ROOT}/components/nfc/ndef/connection_handover/ble_pair_lib")
include_directories("${SDK_ROOT}/components/libraries/crypto")
include_directories("${SDK_ROOT}/components/ble/ble_racp")
include_directories("${SDK_ROOT}/components/libraries/fds")
include_directories("${SDK_ROOT}/components/nfc/ndef/launchapp")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_hrs")
include_directories("${SDK_ROOT}/components/ble/ble_services/ble_rscs")
include_directories("${SDK_ROOT}/components/nfc/ndef/connection_handover/hs_rec")
include_directories("${SDK_ROOT}/components/nfc/t2t_lib/hal_t2t")
include_directories("${SDK_ROOT}/components/libraries/usbd")
include_directories("${SDK_ROOT}/components/nfc/ndef/conn_hand_parser/ac_rec_parser")
include_directories("${SDK_ROOT}/components/libraries/stack_guard")
include_directories("${SDK_ROOT}/components/libraries/log/src")


file(GLOB_RECURSE SRC_LIST "${PROJECT_SOURCE_DIR}/src/*.*")

add_executable(${PROJECT_NAME} ${SRC_LIST})
